--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
+    "react-native-modal-overlay": "^1.2.3",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
   }
