added input functionality

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^25.0.0",
+    "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
