--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "expo": "^25.0.0",
+    "immutability-helper": "^2.6.6",
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.52.0",
