--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
     "react-native-modal-overlay": "^1.2.3",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1"
   }
